<?xml version="1.0" encoding="utf-8"?>
<com.example.moviecatalogue.view.BasicSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catalogue_detail_refresh_srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CatalogueDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/catalogue_detail_root_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/catalogue_detail_banner_siv"
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:contentDescription="@string/movie_image_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/black"
                    tools:src="@drawable/ic_default_movie" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/catalogue_detail_image_siv"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="@dimen/elevation_level_1"
                    android:padding="@dimen/image_stroke_width"
                    app:layout_constraintBottom_toBottomOf="@id/catalogue_detail_banner_siv"
                    app:layout_constraintEnd_toEndOf="@id/catalogue_detail_banner_siv"
                    app:strokeColor="?attr/colorOnPrimary"
                    app:strokeWidth="@dimen/image_stroke_width"
                    tools:src="@drawable/ic_default_movie" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/catalogue_detail_container_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="204dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_top_corner_shape"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/rounded_layout_radius"
                    android:paddingEnd="@dimen/rounded_layout_radius"
                    android:paddingBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/catalogue_detail_container_guideline">

                    <TextView
                        android:id="@+id/catalogue_detail_title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/default_string_text"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Anime Title" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingStart="12dp"
                                android:paddingEnd="16dp">

                                <TextView
                                    android:id="@+id/catalogue_detail_score_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawablePadding="4dp"
                                    android:text="@string/default_string_text"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:drawableEndCompat="@drawable/ic_neutral"
                                    tools:text="28%" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/score"
                                    android:textColor="?attr/secondaryColorOnSurface"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="20dp"
                                android:layout_marginStart="8dp"
                                android:background="?attr/colorDivider" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingStart="12dp"
                                android:paddingEnd="16dp">

                                <TextView
                                    android:id="@+id/catalogue_detail_favorite_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawablePadding="4dp"
                                    android:text="@string/default_string_text"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:drawableEndCompat="@drawable/ic_favorite_red"
                                    tools:text="888" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/favorites"
                                    android:textColor="?attr/secondaryColorOnSurface"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="20dp"
                                android:background="?attr/colorDivider" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingStart="12dp"
                                android:paddingEnd="16dp">

                                <TextView
                                    android:id="@+id/catalogue_detail_episode_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/default_string_text"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    tools:text="14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/episodes"
                                    android:textColor="?attr/secondaryColorOnSurface"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="20dp"
                                android:background="?attr/colorDivider" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingStart="12dp"
                                android:paddingEnd="16dp">

                                <TextView
                                    android:id="@+id/catalogue_detail_duration_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/default_string_text"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    tools:text="23" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/minutes_per_episode"
                                    android:textColor="?attr/secondaryColorOnSurface"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </HorizontalScrollView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/description"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/catalogue_detail_description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:maxLines="8"
                        android:paddingEnd="4dp"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:scrollbarStyle="outsideInset"
                        android:scrollbarThumbVertical="?attr/colorPrimary"
                        android:scrollbars="vertical"
                        android:text="@string/default_string_text"
                        android:textColor="?attr/secondaryColorOnSurface"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"
                        tools:text="Something long description here" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/genres"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/catalogue_detail_genre_cg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:chipSpacingVertical="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/characters"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/catalogue_detail_character_list_rv"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginTop="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.example.moviecatalogue.view.BasicSwipeRefreshLayout>
