<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:elevation="@dimen/elevation_level_1"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    tools:ignore="Overdraw"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/main_message_image_iv"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:alpha="0.6"
        android:contentDescription="@string/message_image_description"
        android:src="@drawable/ic_something_wrong" />

    <TextView
        android:id="@+id/main_message_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="?attr/secondaryColorOnSurface"
        android:textIsSelectable="true"
        android:textSize="24sp"
        tools:text="@string/unknown_error_message" />
</LinearLayout>